--- a/style.css
+++ b/style.css
@@ -41,12 +41,12 @@ h1 {
     margin-bottom: 20px;
 }
 
-#today {
+/* #today {
     margin-top: 10px; 
     margin-bottom: 40px;
     font-size: 16px;
     color: #ffe4d2;
-}
+} */
 
 
 #countdown {
@@ -247,7 +247,7 @@ p {
 
 @media (max-width: 300px) {
     .countdown-container {
-        width: 98%;
+        width: 50%;
         padding: 8px;
     }
 
