--- a/style.css
+++ b/style.css
@@ -168,19 +168,24 @@ p {
         font-size: 16px;
         padding: 15px;
     }
+    .timing p {
+      
+        font-size: 13px;
+       
+    }
 }
 
 @media (max-width: 360px) {
     .time-box {
-        width: 45px;
+        width: 50px;
         padding: 4px;
     }
     h1 {
-        font-size: 18px;
+        font-size: 14px;
     }
     .timing {
         font-size: 14px;
-        padding: 12px;
+        padding: 5px;
     }
 }
 
@@ -189,14 +194,14 @@ p {
         padding: 10px;
     }
     .time-box {
-        width: 40px;
+        width: 45px;
         padding: 3px;
     }
     h1 {
-        font-size: 14px;
+        font-size: 10px;
     }
     .timing {
         font-size: 12px;
-        padding: 10px;
+        padding: 4px;
     }
 }
