--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     height: 100vh;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-start; /* By default, align items to the left */
     align-items: center;
     background-image: url('assets/images/ramadan.png');
     background-size: cover;
@@ -26,7 +26,7 @@ body {
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
     width: 75%;
     max-width: 450px;
-    margin-left: 1.5rem;
+    margin-left: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -135,7 +135,7 @@ p {
 
 @media (max-width: 768px) {
     body {
-        justify-content: center;
+        justify-content: center; /* Center align items on smaller screens */
         align-items: center;
     }
     .countdown-container {
@@ -156,9 +156,14 @@ p {
 }
 
 @media (max-width: 480px) {
+    body {
+        justify-content: center; /* Center align items on smaller screens */
+        align-items: center;
+    }
     .countdown-container {
         width: 100%;
         border-radius: 0;
+        margin: 0;
     }
     .time-box {
         width: 40px;
@@ -174,8 +179,15 @@ p {
 }
 
 @media (max-width: 360px) {
+    body {
+        justify-content: center; /* Center align items on smaller screens */
+        align-items: center;
+    }
+    .countdown-container {
+        padding: 10px;
+    }
     .time-box {
-        width: 60px;
+        width: 35px;
         padding: 2px;
     }
     h1 {
@@ -188,11 +200,15 @@ p {
 }
 
 @media (max-width: 300px) {
+    body {
+        justify-content: center; /* Center align items on smaller screens */
+        align-items: center;
+    }
     .countdown-container {
-        padding: 1px;
+        padding: 5px;
     }
     .time-box {
-        width: 60px;
+        width: 30px;
         padding: 2px;
     }
     h1 {
