--- a/style.css
+++ b/style.css
@@ -30,6 +30,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative; /* Add this line */
+}
+
+.powered-by {
+    position: absolute; /* Add this line */
+    bottom: -30px; /* Add this line */
+    font-size: 12px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .timing {
@@ -140,7 +152,7 @@ p {
     }
     .countdown-container {
         width: 90%;
-        margin: 0;
+        margin: 0 auto; /* Center align container on smaller screens */
         padding: 12px;
     }
     .time-box {
@@ -163,7 +175,7 @@ p {
     .countdown-container {
         width: 100%;
         border-radius: 0;
-        margin: 0;
+        margin: 0 auto; /* Center align container on smaller screens */
     }
     .time-box {
         width: 40px;
@@ -185,6 +197,7 @@ p {
     }
     .countdown-container {
         padding: 10px;
+        margin: 0 auto; /* Center align container on smaller screens */
     }
     .time-box {
         width: 35px;
@@ -206,6 +219,7 @@ p {
     }
     .countdown-container {
         padding: 5px;
+        margin: 0 auto; /* Center align container on smaller screens */
     }
     .time-box {
         width: 30px;
